Merged consumepatternevents branch, refactoring eql package as well
git-svn-id: http://svn.codehaus.org/esper/esper/trunk@390 d91eb1b3-1215-0410-9718-d41490442091